# pireco

./: LICENSE  README.md  index.html  package-lock.json  package.json  piano_recorder.py
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  lib.rs  looper.rs  looper_commands.rs  main.rs  midi.rs  midi_writer.rs  state.rs  wav_writer.rs
src/components/: StatusBar.tsx  TabBar.tsx
src/components/DevicePanel/: AudioDeviceSelector.tsx  MidiDeviceSelector.tsx
src/components/Looper/: LayerList.tsx  LoopPositionBar.tsx  LooperControls.tsx  LooperPage.tsx  OutputDeviceSelector.tsx
src/components/Transport/: TransportControls.tsx
src/components/Visualization/: LevelMeter.tsx  LiveWaveform.tsx  MidiKeyboard.tsx  PlaybackWaveform.tsx
src/hooks/: useAppState.ts  useAudioPlayback.ts  useLooperState.ts  useTauriEvents.ts  useWaveformData.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: midiNoteMap.ts  waveformUtils.ts
