[package]
name = "pireco"
version = "0.1.0"
description = "Piano Recorder - Audio & MIDI recording desktop app"
authors = ["Mix-Anik"]
edition = "2021"

[lib]
name = "pireco_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
midir = "0.10"
hound = "3.5"
